welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: value update is not a member of Boolean
	if (vuBiscuit() = true) {
            ^Program:14: error: not found: value vuBiscuit
		vuBiscuit()=true;
                ^